@@ -9,12 +9,14 @@
 //' @title Run a lars / lasso / elasticNet regression
 //' @param matX A matrix of explanatory variables, i.e. regressors
 //' @param vecY A vector with the target variable
-//' @param testPoints A matrix of test values to validate prediction
 //' @param lambda1 A doube with l1-norm penalty regularization parameter
 //' @param lambda2 A doube with l2-norm penalty regularization parameter
 //' @param useCholesky A logical value indicating whether to use the Cholesky
+//' @param testX A optional matrix of test values to validate prediction
 //' decomposition when solving the linear system, else full Gram matrix is used.
-//' @return A list with results
+//' @return A list with estimated coefficient, the value of lambda1 after each iteration
+//' and the predicted values, either from the training data or, if supplied, the test
+//' set.
 //' @examples
 //' \dontrun{
 //'   data(trainSet)
@@ -24,9 +26,10 @@
 //'   res <- LARS(mat, y, tst, 0.5, 0.5)
 //' }
 // [[Rcpp::export]]
-Rcpp::List LARS(arma::mat& matX, arma::vec& vecY, const arma::mat& testPoints,
+Rcpp::List LARS(arma::mat& matX, arma::vec& vecY,
                 const double lambda1, const double lambda2,
-                bool useCholesky = false) {
+                bool useCholesky = false,
+                const Rcpp::Nullable<Rcpp::NumericMatrix>& testX = R_NilValue) {
 
     // Initialize the object.
     mlpack::regression::LARS lars(useCholesky, lambda1, lambda2);
@@ -35,35 +38,26 @@ Rcpp::List LARS(arma::mat& matX, arma::vec& vecY, const arma::mat& testPoints,
     if (vecY.n_rows == 1)
         vecY = arma::trans(vecY);
 
-    //if (vecY.n_cols > 1)
-    //    Rcpp::stop("Only one column or row allowed in responses file!");
-
     if (vecY.n_elem != matX.n_rows)
         Rcpp::stop("Number of responses must be equal to number of rows of X!");
 
     arma::vec beta;
-    //lars.Train(matX, matY.unsafe_col(0), beta, false /* do not transpose */);
     lars.Train(matX, vecY, beta, false /* do not transpose */);
 
-    // TODO: test for having test data
-    //Log::Info << "Regressing on test points." << endl;
-
-    // Load test points.
-    //mat testPoints = std::move(CLI::GetParam<arma::mat>("test"));
-
-    // Make sure the dimensionality is right.  We haven't transposed, so, we
-    // check n_cols not n_rows.
-    if (testPoints.n_cols != lars.BetaPath().back().n_elem)
-        Rcpp::stop("Dimensionality of test set (%d) "
-                   "is not equal to the dimensionality of the model (%d)",
-                   testPoints.n_cols, lars.BetaPath().back().n_elem);
-
+    arma::vec lmb = lars.LambdaPath();
     arma::vec predictions;
-    lars.Predict(testPoints.t(), predictions, false);
+    if (testX.isNotNull()) {
+        arma::mat testset = Rcpp::as<arma::mat>(testX);
+        if (testset.n_cols != lars.BetaPath().back().n_elem)
+            Rcpp::stop("Dimensionality of test set (%d) "
+                       "is not equal to the dimensionality of the model (%d)",
+                       testset.n_cols, lars.BetaPath().back().n_elem);
+        lars.Predict(testset.t(), predictions, false);
+    } else {
+        lars.Predict(matX.t(), predictions, false);
+    }
 
-    // Save test predictions.  One per line, so, don't transpose on save.
-    //if (CLI::HasParam("output_predictions"))
-    //    CLI::GetParam<arma::mat>("output_predictions") = std::move(predictions);
-
-    return Rcpp::List::create(Rcpp::Named("predictions") = predictions);
+    return Rcpp::List::create(Rcpp::Named("beta") = beta,
+                              Rcpp::Named("lamdaPath") = lmb,
+                              Rcpp::Named("predictions") = predictions);
 }
